- Added Skinning Skill
- Added skinned animals
- Added Ruined Carcass
- Added /avatar
- Balanced a bunch of power requirements
- Balanced Excavator recipe
- Balanced Truck recipe
- Balanced Hand Plough recipe
- Balanced Skid Steer recipe
- Balanced Wheelbarrow recipe
- Balanced Rice Glue recipe
- Balanced Lasers recipe
- Balanced Computer Labs recipe
- Balanced Anvil recipe
- Wind Turbine needs to be placed on 3x3 reinforced concrete</size>

<color=green><b>2018-04-13</b></color><size=18>
- Removed Lumber from barrel recipes
- Removed Copper ingot from barrel recipes
- Added Trapper skill
- Added Small Animal Trap
- Added /donate</size>

<color=green><b>2018-04-08</b></color><size=18>
- Removed Campfire Bison, Elk and Wolf recipes
- Stations using fuel is now inherited by default
- Moved charcoal production from Smith to Carpenter skill tree
- Increased housing value of chair from 0.5 to 1</size>

<color=green><b>2018-04-06</b></color><size=18>
- Storage components are now set to inherit by default
- Removed seed drop from plants that you can craft seeds for
- Changes to Steel Table Lamp, Steel Floor Lamp and Steel Ceiling Light recipes
- Changes to Farming Skill Book recipe
- Changed icon for Coin
- Reduced construction skill costs
- Reduced crafting time for fillets
- Reduced amounts of items you get from plants
- Reduced crafting time for seeds
- Added more seed recipes
- Added recipe Hewn logs to Lumber
- Added recipe Mortared Stone to Brick
- Added more books to some of the more advanced techs
- Added fuel value to Wood Pulp
- Added Wood Pulp as fuel in a number of stations
- Added /modkit
- Added /unclaimselect and /unclaimconfirm for admins</size>

<color=green><b>2018-04-03</b></color><size=18>
- Removed Super Secret Dildo Statue (April Fools)
- Hid Ecko Statue (Temp fix)
- Added weight to world objects
- Halved the weight of coal and ores
- Added /houseranking
- Added /report
- Added Super Skills</size>

<color=green><b>2018-04-01</b></color><size=18>